create mobile responsive navbar

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -55,3 +55,14 @@
   top: 90%;
   right: 30%;
 }
+
+.dropdown {
+  position: fixed;
+  top: 0em;
+  display: grid;
+  background: #3e3e3e87;
+  /* color: black; */
+  z-index: 101;
+  right: 4em;
+  border-radius: 1em;
+}
