--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.profilePic img {
+  max-width: 128px;
+  max-height: 128px;
+  margin: auto;
+}
