--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -79,3 +79,9 @@
   display: flex;
   flex-direction: column-reverse;
 }
+
+.chatProfilePic {
+  max-width: 64px;
+  max-height: 64px;
+  margin: auto;
+}
