display Chat Info (#79)
* build out WelcomePage component

* created MissingInfoWarning component

* dont render missing warning when profile is valid

* rename ChatMessenger component

* render LEFT/RIGHT chat messages

* style chat message window and colors

* automatically scroll chat messenger down

* fetch chat info in ChatPage

* create chat inco modal

* add delete chat functionality to frontend

* test delete chat endpoint controllers

* delete chat functionality

* minor component bug fixes

* render static last message

* fetch last message from server in CLIENT"

* store and render LAST chat message on ChatListPage

* style chat list page

* clean up comments

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -66,3 +66,28 @@
   right: 4em;
   border-radius: 1em;
 }
+
+.profilePic img {
+  max-width: 128px;
+  max-height: 128px;
+  margin: auto;
+}
+
+.messagesWindow {
+  min-height: 200px;
+  max-height: 300px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.chatProfilePic {
+  max-width: 64px;
+  max-height: 64px;
+  margin: auto;
+}
+
+.chatPic {
+  width: 64px;
+  height: 64px;
+}
